@@ -1,6 +1,7 @@
 package pl.kurs.figures.service;
 
 import com.querydsl.core.BooleanBuilder;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -12,6 +13,9 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
 import pl.kurs.figures.criteria.ShapeSearchCriteria;
 import pl.kurs.figures.exceptions.InvalidEntityException;
 import pl.kurs.figures.model.Circle;
@@ -19,11 +23,16 @@ import pl.kurs.figures.model.Rectangle;
 import pl.kurs.figures.model.Shape;
 import pl.kurs.figures.model.Square;
 import pl.kurs.figures.repository.ShapeRepository;
+import pl.kurs.figures.security.entity.User;
+
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
+import static org.hamcrest.Matchers.any;
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -34,6 +43,16 @@ class ShapeServiceTest {
     private ShapePredicateBuilder shapePredicateBuilder;
     @InjectMocks
     private ShapeService shapeService;
+    @Mock
+    private Authentication authentication;
+
+    @Mock
+    private SecurityContext securityContext;
+
+    @AfterEach
+    public void afterEach() {
+        shapeRepository.deleteAll();
+    }
 
     static Stream<Arguments> shapeProvider() {
         return Stream.of(
@@ -53,6 +72,7 @@ class ShapeServiceTest {
         } else if (shape instanceof Rectangle) {
             ((Rectangle) shape).calculateProperties();
         }
+
         when(shapeRepository.save(shape)).thenReturn(shape);
 
         Shape returnedShape = shapeService.addShape(shape);
@@ -84,26 +104,58 @@ class ShapeServiceTest {
 
     @Test
     void shouldReturnShapesListWhenGetShapes() {
-        // Given
         ShapeSearchCriteria criteria = new ShapeSearchCriteria();
         int page = 0;
         int size = 10;
         BooleanBuilder builder = new BooleanBuilder();
 
-        List<Shape> expectedShapes = Arrays.asList(new Square(5), new Circle(3), new Rectangle(5,4), new Square(6), new Circle(4), new Rectangle(7,8));
-        Page<Shape> pagedShapes = new PageImpl<>(expectedShapes);
+        List<Shape> expectedShapesList = List.of(new Square(5), new Circle(3), new Rectangle(5,4), new Square(6), new Circle(4), new Rectangle(7,8));
+        Page<Shape> pagedShapes = new PageImpl<>(expectedShapesList);
 
         when(shapePredicateBuilder.buildPredicate(criteria)).thenReturn(builder);
         when(shapeRepository.findAll(builder, PageRequest.of(page, size))).thenReturn(pagedShapes);
 
-        // When
         List<Shape> resultShapes = shapeService.getShapes(criteria, page, size);
 
-        // Then
         assertNotNull(resultShapes);
-        assertEquals(expectedShapes.size(), resultShapes.size());
-        assertTrue(resultShapes.containsAll(expectedShapes));
+        assertEquals(expectedShapesList.size(), resultShapes.size());
+        assertTrue(resultShapes.containsAll(expectedShapesList));
     }
+
+    @Test
+    public void shouldGetShapesForCurrentUser() {
+        securityContext = mock(SecurityContext.class);
+        authentication = mock(Authentication.class);
+
+        String currentUser = "testUser";
+
+        ShapeSearchCriteria criteria = new ShapeSearchCriteria();
+        criteria.setCreatedBy(currentUser);
+
+        int page = 0;
+        int size = 10;
+
+        BooleanBuilder builder = new BooleanBuilder();
+
+        List<Shape> expectedShapesList = List.of(new Square(5), new Circle(3), new Rectangle(5,4), new Square(6), new Circle(4), new Rectangle(7,8));
+        Page<Shape> pagedShapes = new PageImpl<>(expectedShapesList);
+
+        SecurityContextHolder.setContext(securityContext);
+
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+        when(authentication.getName()).thenReturn(currentUser);
+        when(shapePredicateBuilder.buildPredicate(criteria)).thenReturn(builder);
+        when(shapeRepository.findAll(builder, PageRequest.of(page, size))).thenReturn(pagedShapes);
+
+        List<Shape> resultShapes = shapeService.getShapesForCurrentUser(criteria, page, size);
+
+        assertNotNull(resultShapes);
+        assertEquals(expectedShapesList.size(), resultShapes.size());
+        assertTrue(resultShapes.containsAll(expectedShapesList));
+
+    }
+
+
 
 
 }
